--- a/style.scss
+++ b/style.scss
@@ -18,12 +18,14 @@ $gray: rgba(130, 130, 130, 1.00);
 }
 
 body {
+  margin: 1% 1% 1% 0;
+
   header {
     .title {
       font-size: 15px;
       font-weight: 200;
       padding: 0.5% 0 0 1%;
-      margin: 0;
+      margin: 0 0 0 1%;
       display: inline-block;
     }
 
@@ -38,23 +40,12 @@ body {
 
   main {
     form {
-      //p {
-      //  display: block;
-      //  font-size: 15px;
-      //  font-weight: 400;
-      //  margin: 20px 30px 0;
-      //  color: $gray;
-      //}
       .images-library {
-
         .container {
-          //display: flex;
-          //flex-direction: row;
-          //flex-wrap: nowrap;
           overflow-x: scroll;
           background-color: $light-gray;
-          padding-top: 1%;
           padding-left: 1%;
+          align-items: center;
 
           input[type=radio] {
             display: none;
@@ -62,18 +53,14 @@ body {
             position: absolute !important;
           }
 
-          label {
-            //cursor: pointer;
-          }
-
           img {
-            width: 150px;
+            width: 140px;
             margin: 8px;
           }
 
           input[type=radio]:checked + label img {
             border: 5px solid $gray;
-
+            width: 150px;
           }
         }
       }
@@ -85,10 +72,9 @@ body {
         .example-img {
           width: 9%;
           margin: 0.8%;
-          margin-left: 2%;
+          margin-left: 2.2%;
 
           .container {
-
             .example {
               p {
                 font-size: 10px;
@@ -108,18 +94,55 @@ body {
         .preview-img {
           width: 50%;
           padding: 1.3%;
-          margin-top: 3%;
-          //display: inline-block;
+          margin-top: 1.3%;
 
           p {
             text-align: center;
             font-size: 80%;
+            padding: 0;
+            margin: 0.5rem;
           }
 
-          img {
-            width: 100%;
+          a{
+            img{
+              width: 100%;
+            }
+            img:hover + a{
+              box-shadow: $gray 4px 4px;
+              transition: 0.2s;
+            }
+          }
+
+          .aspect{
+            text-align: center;
+            margin-top: 1%;
+            
+            label{
+              display: inline-block;
+              padding: 0.3rem 0.7rem;
+              margin: 8px 1% auto 1%;
+              border: solid $gray;
+              box-shadow: $gray 2px 2px;
+              border-radius: 20px;
+              font-size: 65%;
+              color: $gray;
+            }
+
+            input[type=radio]{
+              display: none;
+              clip: rect(1px 1px 1px 1px);
+              position: absolute !important;
+
+              &:checked + label{
+                border: solid $gray;
+                background-color: $gray;
+                color: #fff;
+                box-shadow: $white -2px -2px;
+              }
+            }
           }
         }
+      }
 
         .choice {
           display: flex;
@@ -175,11 +198,7 @@ body {
               .size-p {
                 width: 15%;
                 font-size: 75%;
-                //display: flex;
               }
-
-              //label {
-              //  align-items: flex-start;
             }
           }
 
@@ -328,7 +347,6 @@ body {
       }
     }
   }
-}
 
 footer {
   p {
