--- a/style.scss
+++ b/style.scss
@@ -18,14 +18,14 @@ $gray: rgba(130, 130, 130, 1.00);
 }
 
 body {
-  margin: 1% 1% 1% 0;
+  margin: 0 1% 1% 0;
 
   header {
     .title {
       font-size: 15px;
       font-weight: 200;
       padding: 0.5% 0 0 1%;
-      margin: 0 0 0 1%;
+      margin: 0.4% 0 0 1%;
       display: inline-block;
     }
 
