--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,7 @@ body {
           background-color: $light-gray;
           padding-left: 1%;
           align-items: center;
+          height: 130px;
 
           input[type=radio] {
             display: none;
