update php and index and scss and css

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 /* 色 */
 $white: rgba(255, 255, 255, 1.00);
 $light-gray: rgba(230, 230, 230, 1.00);
-$mid-gray: rgba(170, 170, 170);
+$mid-gray: rgba(170, 170, 170, 1.00);
 $gray: rgba(130, 130, 130, 1.00);
 
 
