--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@
   color: rgb(130, 130, 130);
 }
 
+body{
+  margin: 0 1% 1% 0;
+}
+
 body header .title {
   font-size: 15px;
   font-weight: 200;
   padding: 0.5% 0 0 1%;
-  margin: 0;
+  margin: 0.4% 0 0 1%;
   display: inline-block;
 }
 body header .sub-title {
@@ -32,11 +36,12 @@ body main form .images-library .container input[type=radio] {
   position: absolute !important;
 }
 body main form .images-library .container img {
-  width: 150px;
+  width: 140px;
   margin: 8px;
 }
 body main form .images-library .container input[type=radio]:checked + label img {
   border: 5px solid rgb(130, 130, 130);
+  width: 150px;
 }
 body main form .container {
   display: flex;
@@ -45,7 +50,7 @@ body main form .container {
 body main form .container .example-img {
   width: 9%;
   margin: 0.8%;
-  margin-left: 2%;
+  margin-left: 2.2%;
 }
 body main form .container .example-img .container .example p {
   font-size: 10px;
@@ -60,14 +65,42 @@ body main form .container .example-img .container .example img {
 body main form .container .preview-img {
   width: 50%;
   padding: 1.3%;
-  margin-top: 3%;
+  margin-top: 1.3%;
 }
 body main form .container .preview-img p {
   text-align: center;
   font-size: 80%;
+  padding: 0;
+  margin: 0.5rem;
 }
 body main form .container .preview-img img {
   width: 100%;
+  box-shadow: rgb(130, 130, 130) 6px 6px;
+}
+body main form .container .preview-img .aspect {
+  text-align: center;
+  margin-top: 1%;
+}
+body main form .container .preview-img .aspect label {
+  display: inline-block;
+  padding: 0.3rem 0.7rem;
+  margin: 8px 1% auto 1%;
+  border: solid rgb(130, 130, 130);
+  box-shadow: rgb(130, 130, 130) 2px 2px;
+  border-radius: 20px;
+  font-size: 65%;
+  color: rgb(130, 130, 130);
+}
+body main form .container .preview-img .aspect input[type=radio] {
+  display: none;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+}
+body main form .container .preview-img .aspect input[type=radio]:checked + label {
+  border: solid rgb(130, 130, 130);
+  background-color: rgb(130, 130, 130);
+  color: #fff;
+  box-shadow: rgb(255, 255, 255) -2px -2px;
 }
 body main form .container .choice {
   display: flex;
@@ -75,7 +108,7 @@ body main form .container .choice {
 }
 body main form .container .choice .container {
   flex-direction: column;
-  margin-top: 4%;
+  margin-top: 2.5%;
   margin-left: 2%;
   width: 100%;
 }
@@ -139,6 +172,7 @@ body main form .container .choice .weekstart .weekstart-p {
 body main form .container .choice .holiday-color {
   margin-bottom: 4%;
   display: flex;
+  height: 2.3rem;
 }
 body main form .container .choice .holiday-color .holiday-color-p {
   width: 17%;
@@ -240,8 +274,9 @@ body main .download-btn a[type=submit]:hover {
 }
 
 footer p {
-  font-size: 5%;
+  font-size: 1pt;
   text-align: center;
+  margin: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
