--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-  margin: 0 1% 1% 0;
+  margin: 0;
 }
 
 body header .title {
@@ -276,6 +276,7 @@ footer p {
   font-size: 1pt;
   text-align: center;
   margin: 0;
+  height: 0px;
 }
 
 /*# sourceMappingURL=style.css.map */
